tests/baselines/reference/duplicateConstructorOverloadSignature.errors.txt
==== tests/cases/compiler/duplicateConstructorOverloadSignature.ts (1 errors) ====
    class C {
        constructor(x: number);
        constructor(x: number);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! duplicateConstructorOverloadSignature.ts(3,5): error TS2145: Duplicate constructor overload signature.
        constructor(x: any) { }
    }